data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_474.wast
;; 5. **Test Description**: Create a loop containing a sequence of `br` instructions, with `br` targeting labels in a specific order, causing complete stack unwind if implemented correctly and includes an external counter. Ensure the counter logic is respected to end loop execution.    **Constraint**: Checks operand stack management and correct restoration of operand states.    **Relation to Infinite Loops**: If operands are not correctly managed, the intended loop exit condition may never be met.

(assert_invalid
 (module
  (func $loop-br-unwind (result i32)
   (local i32)
   (loop (result i32)
     (block (result i32) 
       (br_if 1 (i32.gt_u (local.get 0) (i32.const 10)))
       (local.set 0 (i32.add (local.get 0) (i32.const 1)))
       (br 0)
     )
   )
  )
 )
 "type mismatch"
)